--- a/CSS/edenQuemSomos.css
+++ b/CSS/edenQuemSomos.css
@@ -73,7 +73,7 @@ nav ul li a:active {
 }
 
 /* Container 1 */
-container1 {
+#objetivo {
     margin: 20px 0px;
     display: flex;
     justify-content: center;
@@ -100,7 +100,7 @@ container1 {
 }
 
 /* Container 2 */
-container2 {
+#equipes {
     margin: 20px 0px;
     display: flex;
     justify-content: center;
@@ -158,7 +158,7 @@ container2 {
 }
 
 /* Container 3 */
-container3 {
+#valoresGrupo {
     margin: 20px 0px;
     display: flex;
     justify-content: center;
