--- a/CSS/edenTermosdeUso.css
+++ b/CSS/edenTermosdeUso.css
@@ -48,7 +48,7 @@ nav ul li a:active {
 }
 
 /* Parte principal */
-container {
+#informacoes {
     display: flex;
     justify-content: center;
     width: 100%;
