--- a/src/css/edenHeader.css
+++ b/src/css/edenHeader.css
@@ -1,7 +1,7 @@
 .main-header {
     background-color: white;
     padding: 10px 0;
-    border-bottom: 1px solid #0073ff;
+    box-shadow: 2px 1px 8px #474747;
     position: fixed;
     top: 0;
     z-index: 1000;
