--- a/src/css/edenHeader.css
+++ b/src/css/edenHeader.css
@@ -6,6 +6,7 @@
     top: 0;
     z-index: 1000;
     width: 100%;
+    height: 50px;
 }
 
 nav ul {
@@ -17,15 +18,16 @@ nav ul {
 }
 
 nav ul li {
+    color: #0073ff;
+    font-weight: bold;
     margin: 0 15px;
 }
 
 nav ul li a {
     text-decoration: none;
     color: #0073ff;
-    font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 0px 0px 5px 5px;
+    padding: 16px 15px;
+    border-radius: 0px 0px 10px 10px;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -52,19 +54,22 @@ nav ul li a:active {
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
-  }
+}
   
-  img#logo {
-    height: 40px;
-    margin-right: auto;
-    margin-left: 5px;
-    margin-bottom: -5px;
-    margin-top: -5px;
-  }
-  
-  .nav-bar {
+.nav-bar {
     flex: 1;
     display: flex;
     justify-content: center;
-  }
+}
+
+#cadeado_navbar {
+    margin-top: 5px;
+    width: 30px;
+}
+
+#edenLogo {
+    margin-top: 5px;
+    width: 40px;
+    height: 40px;
+}
   
