--- a/src/css/edenQuemSomos.css
+++ b/src/css/edenQuemSomos.css
@@ -13,7 +13,7 @@
     justify-content: center;
     padding: 25px 20px;
     background: #3c87ff;
-    background-image: url(../Imagens/gosma_lateral.gif);
+    background-image: url(../imagens/separador-background.gif);
     background-repeat: no-repeat;
     background-position: center;
     margin: 70px 0;
@@ -28,7 +28,7 @@
 }
 
 .primeiroSeparador {
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 /* Container 1 */
@@ -38,7 +38,7 @@ container1 {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 400px;
+    height: 450px;
 }
 
 .parte1 {
@@ -116,6 +116,7 @@ container2 {
     margin: 40px 0;
 }
 
+
 /* Container 3 */
 container3 {
     margin: 20px 0px;
@@ -141,6 +142,7 @@ container3 {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    width: 80%;
     margin: 0px auto 50px;
 }
 
