--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,26 +5,22 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-img {
-    width: 20%;
-}
 
 /* Parte 1 */
 .nomeEden {
     color: #0073ff;
 }
 
-.container1 {
-    margin-top: 20px;
+container1 {
+    margin-top: 2%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 700px;
 }
 
 .parte1 {
-    background: #e4f3ff;
+    background: #ecfbff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,31 +30,32 @@ img {
 }
 
 #roboParte1 {
-    width: 600px;
+    width: 40%;
 }
 
 .textoParte1 {
     text-align: center;
-    width: 700px;
+    width: 50%;
+    font-size: 100%;
 }
 
 .botao img {
     margin-top: 50px;
-    height: 60px;
-    width: 150px;
-    transition: 1s;
+    height: 8%;
+    width: 21%;
+    transition: 0.3s;
 }
 
 .botao img:hover {
-    transition: 1s;
+    transition: 0.3s;
     margin-top: 40px;
-    height: 70px;
-    width: 170px;
+    height: 9%;
+    width: 23%;
 }
 
 
 /* Parte 2 */
-.container2 {
+container2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,7 +74,7 @@ img {
     box-shadow: 0 0px 10px #99c0ff;
 }
 
-.container2 button {
+container2 button {
     background-color: #0080ff;
     box-shadow: grey 2px 2px 2px;
 }
@@ -104,7 +101,7 @@ img {
 
 
 /* PArte 3 */
-.container3 {
+container3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -128,13 +125,13 @@ img {
 
 #videoInstitucional {
     margin: 0 auto 100px;
-    width: 800px;
+    width: 730px;
     height: 450px;
     box-shadow: 0 0px 15px #99c0ff;
 }
 
 /* Parte 4 */
-.container4 {
+container4 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -171,7 +168,7 @@ img {
 }
 
 /* Parte 5 */
-.container5 {
+container5 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -207,7 +204,7 @@ img {
 }
 
 /* Parte final */
-.container6 {
+container6 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -287,6 +284,7 @@ img {
     transition: background-color 0.3s, transform 0.3s;
     box-shadow: grey 2px 2px 2px;
     cursor: pointer;
+    width: 70%;
 }
 
 
@@ -297,7 +295,7 @@ img {
     justify-content: center;
     padding: 25px 20px;
     background: #3c87ff;
-    background-image: url(../Imagens/gosma_lateral.gif);
+    background-image: url(../imagens/separador-background.gif);
     background-repeat: no-repeat;
     background-position: center;
 }
