--- a/src/css/edenDocumentacoes.css
+++ b/src/css/edenDocumentacoes.css
@@ -4,34 +4,33 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
+
 html, body, .container {
     margin: 0 auto;
- }
-
-
+}
 
 .container {
     overflow: auto; 
-    content: "";
     display: table;
     clear: both;
-    
+    max-width: 1200px;
+    padding: 0 15px; 
 }
 
 .partePrincipal {
     display: flex;
     flex-direction: column;
-    justify-content: center ;
-    float: right;
-    position: relative;
-    top: 100px;
-    right: 50px;
-    width: 70vw; 
+    justify-content: center;
+    align-items: center;
+    position: relative; 
+    top: 50px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .box {
     padding: 30px;
-    margin: 50px auto;
+    margin: 50px 0;
     border-radius: 10px;
     box-shadow: rgb(195, 215, 255) 3px 3px 10px 2px;
 }
@@ -41,25 +40,27 @@ html, body, .container {
 }
 
 h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     font-size: 40px;
     background: linear-gradient(135deg, #bddfff 0%, rgb(116, 174, 255) 80%, #1b81ff 100%);
     box-shadow: #f0f0f0 3px 3px 10px 2px;
     color: white;
     height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 50px;
+    width: 100%;
 }
 
 .box h2 {
     color: #0073ff;
-    margin: 20px 30px 20px;
+    margin: 20px 30px;
 }
 
 p {
     font-size: 14px;
-    margin: 20px 35px 20px;
+    margin: 20px 35px;
     text-align: justify;
 }
 
@@ -71,7 +72,7 @@ p {
 
 ul {
     font-size: 20px;
-    margin: 20px 70px 20px;
+    margin: 20px 70px;
     text-align: justify;
 }
 
@@ -81,98 +82,6 @@ ol {
 
 li {
     font-size: 14px;
-    margin: 20px auto 20px;
+    margin: 20px 0;
 }
 
-
-
-.indice {
-    position: fixed;
-    display: flex;
-    justify-items: center;
-    margin-left: 35px;
-    margin-top: 100px;
-    width: 30vw;
-}
-
-.indice h3 {
-    color: #0073ff;
-}
-
-.indice li {
-    font-size: 14px;
-    width: fit-content;
-    margin: 15px 15px 15px;
-}
-
-.indice a {
-    color: black;
-    text-decoration: none;
-}
-
-@media (max-width: 1024px) {
-    body {
-        display: flex;
-        justify-content: center; 
-    }
-    
-    .container {
-        width: 100vw; 
-        display: flex;
-        justify-content: center;
-    }
-
-    .partePrincipal {
-        width: 90%; 
-        margin: 0 auto;
-        margin-top: 90px;
-        float: none; 
-        position: static;
-    }
-
-    .indice {
-        display: none;
-    }
-    
-    .box {
-        padding: 0;
-        margin: 20px 0;
-    }
-    
-    h1 {
-        font-size: 35px;
-        height: 80px;
-    }
-    
-    p, ul, ol, li {
-        font-size: 13px;
-    }
-}
-
-@media (max-width: 768px) {
-    .partePrincipal {
-        width: 90%;
-        margin: 0 auto;
-        margin-top: 90px;
-
-    }
-
-    .box {
-        padding: 15px;
-        margin: 30px 20px;
-    }
-
-    h1 {
-        font-size: 30px;
-        height: 70px;
-    }
-
-    .box h2 {
-        font-size: 18px;
-        margin: 15px;
-    }
-
-    p, ul, ol, li {
-        font-size: 12px;
-    }
-}
