--- a/src/css/media-query-documentacoes.css
+++ b/src/css/media-query-documentacoes.css
@@ -1,9 +1,50 @@
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
+    body {
+        display: flex;
+        justify-content: center; 
+    }
+    
+    .container {
+        width: 100vw; 
+        display: flex;
+        justify-content: center;
+    }
+
     .partePrincipal {
-        width: 90%;
+        width: 90%; 
         margin: 0 auto;
         margin-top: 90px;
+        float: none; 
+        position: static;
+    }
 
+    .indice {
+        display: none;
+    }
+    
+    .box {
+        right: 400px;
+    }
+    
+    h1 {
+        font-size: 30px;
+        height: 55px;
+        top: 50px;
+        width: 100%;
+        position: absolute;
+    }
+    
+    p, ul, ol, li {
+        font-size: 13px;
+        padding: 0px 0px 10px 20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .partePrincipal {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 90px;
     }
 
     .box {
@@ -13,7 +54,7 @@
 
     h1 {
         font-size: 30px;
-        height: 70px;
+        height: 55px;
     }
 
     .box h2 {
@@ -24,4 +65,56 @@
     p, ul, ol, li {
         font-size: 12px;
     }
+}
+
+/* Responsividade para dispositivos ultra-compactos (menores que 360px de largura) */
+@media (max-width: 360px) {
+    .container {
+        width: 100%;
+        padding: 0 5px; /* Reduz padding lateral para mais espaço */
+    }
+
+    h1 {
+        font-size: 24px;
+        height: auto;
+        padding: 10px;
+        line-height: 1.2; /* Ajusta o espaçamento interno */
+        text-align: center;
+        position: relative;
+        top: 50px;
+    }
+
+    .partePrincipal {
+        width: 100%;
+        margin-top: 50px;
+        position: relative;
+        top: 10px;
+
+    }
+
+    .box {
+        padding: 10px;
+        margin: 10px;
+    }
+
+    .box h2 {
+        font-size: 16px;
+        margin: 8px 0;
+    }
+
+    p, ul, ol, li {
+        font-size: 11px;
+        margin: 8px 5px;
+    }
+
+    /* Links, títulos, e outros elementos */
+    .box a {
+        font-size: 12px;
+    }
+
+    ul, ol {
+        font-size: 12px;
+        padding: 0 10px; /* Reduz padding para encaixar melhor */
+    }
+
 }
