--- a/src/css/media-query-header.css
+++ b/src/css/media-query-header.css
@@ -40,8 +40,11 @@
 }
 
 @media screen and (max-width: 350px) {
+    
+    
     nav ul li {
         margin: 0 7px;
+        font-size: 10px;
     }
 
     nav ul li a:hover {
