--- a/src/css/style.css
+++ b/src/css/style.css
@@ -203,8 +203,45 @@ container5 {
     margin: 0 0 30px;
 }
 
-/* Parte final */
+/* Parte 6 */
 container6 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 750px;
+}
+
+.parte6 {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
+}
+
+#imagemParte6 {
+    margin-left: 2%;
+    width: 70%;
+}
+
+.textoParte6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+    font-size: medium;
+    line-height: 25px;
+    margin-right: 100px;
+    width: 600px;
+}
+
+.textoParte6 h1 {
+    color: #0073ff;
+    margin: 0 0 30px;
+}
+
+/* Parte final */
+container7 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -212,7 +249,7 @@ container6 {
     width: 100%;
 }
 
-.parte6 {
+.parte7 {
     display: flex;
     justify-content: center;
     align-items: center;
